[package]
name = "seda_bus"
version = "0.0.1"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "A Staged Event-Driven Architectural message bus."
homepage = "http://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/seda-bus"
repository = "https://github.com/resolvingarchitecture/seda-bus"
publish = true
readme = "README.md"
keywords = ["seda","seda-bus","message-bus"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"

#dbus = "0.8.1"
scheduled-thread-pool = "0.2.3"
futures = "0.3.4"
tokio = "0.2.13"

ra_common = "0.0.5"

[dev-dependencies]
assert_cmd = "0.10"